# sub2api

./: .gitignore  .goreleaser.yaml  AGENTS.md  DEV_GUIDE.md  README.md  README_zyx.md  README_zyx_image.md
.github/: audit-exceptions.yml
.github/workflows/: backend-ci.yml  release.yml  security-scan.yml
backend/internal/handler/: openai_gateway_handler.go  openai_gateway_handler_test.go
backend/internal/handler/admin/: account_handler_available_models_test.go
backend/internal/pkg/apicompat/: chatcompletions_responses_bridge.go  chatcompletions_responses_test.go  types.go
backend/internal/pkg/openai/: constants.go  constants_test.go
backend/internal/pkg/openai_compat/: responses_path_mode.go
backend/internal/repository/: gateway_cache.go  scheduler_cache.go  scheduler_cache_unit_test.go
backend/internal/service/: account.go  account_base_url_test.go  account_test_service.go  gateway_cache_test_helpers_test.go  gateway_multiplatform_test.go  gateway_service.go  gemini_multiplatform_test.go  openai_account_scheduler_test.go  openai_apikey_responses_probe.go  openai_codex_transform.go  openai_cyber_session_block_test.go  openai_gateway_chat_completions_raw_test.go  openai_gateway_responses_chat_fallback.go  openai_gateway_responses_chat_fallback_test.go  openai_gateway_service.go  openai_gateway_service_test.go  openai_images.go  openai_model_mapping_test.go  openai_responses_chat_stateful.go  openai_ws_forwarder.go  openai_ws_state_store_test.go
backend/internal/testutil/: stubs.go
backend_next/: Cargo.toml
backend_next/crates/domain/: Cargo.toml
backend_next/crates/domain/src/: account.rs  api_key.rs  group.rs  lib.rs
backend_next/crates/gateway/: Cargo.toml
backend_next/crates/gateway/src/: bridge.rs  context.rs  ingress.rs  lib.rs  pipeline.rs  provider.rs  routing.rs  state.rs
backend_next/crates/protocol/: Cargo.toml
backend_next/crates/protocol/src/: downstream.rs  endpoint.rs  lib.rs
backend_next/crates/repository/: Cargo.toml
backend_next/crates/repository/src/: lib.rs
backend_next/crates/server/: Cargo.toml
backend_next/crates/server/src/: admin_ops.rs  admin_portal.rs  auth.rs  backup_executor.rs  backup_scheduler.rs  channel_monitor_probe.rs  config.rs  data_management_executor.rs  email_delivery.rs  email_queue.rs  filesystem_dump.rs  gateway_runtime.rs  gateway_scheduler.rs  lib.rs  main.rs  notification_email.rs  oauth_provider.rs  pages.rs  password_reset_store.rs  payment_portal.rs  payment_provider.rs  payment_views.rs  quota_window.rs  redis_client.rs  redis_dump.rs  response.rs  responses_chat_bridge.rs  responses_chat_state_store.rs  risk_control.rs  s3_probe.rs  setup.rs  smtp_probe.rs  state.rs  system_ops.rs  system_update_executor.rs  totp.rs  totp_secret.rs  usage_views.rs  user_portal.rs  user_views.rs  (+1 more)
backend_next/crates/server/src/routes/: mod.rs
backend_next/docs/: MigrationStatus.md  RouteParity.md  RustBackendDesign.md
backend_next/migrations/: 0001_core_gateway_schema.sql
backend_next/tools/: route-parity.mjs
deploy/: docker-compose.zyx.yml  update_docker.sh
doc_zyx/: Development.md  ResponsesChatCompletionsBridge.md  Test.md  development_docker.md
frontend/: vite.config.ts
frontend/src/components/account/: CreateAccountModal.vue  EditAccountModal.vue
frontend/src/components/layout/: AppSidebar.vue
frontend/src/composables/: useModelWhitelist.ts
frontend/src/composables/__tests__/: useModelWhitelist.spec.ts
frontend/src/i18n/locales/: en.ts  zh.ts
frontend/src/router/: index.ts
frontend/src/types/: index.ts
frontend/src/views/user/: ModelMarketplaceView.vue
tools/: test-openai-chat-stream.py
(+4 files in other folders)
