[workspace]
members = [
    "crates/domain",
    "crates/protocol",
    "crates/gateway",
    "crates/repository",
    "crates/server",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/Wei-Shaw/sub2api"

[workspace.dependencies]
anyhow = "1"
aes-gcm = "0.10"
async-trait = "0.1"
axum = "0.7"
base64 = "0.22"
bytes = "1"
futures-util = "0.3"
flate2 = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.10"
hex = "0.4"
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "socks", "stream"] }
rand = "0.8"
rustls = "0.23"
rustls-pki-types = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tar = "0.4"
hmac = "0.12"
sha1 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "json", "derive"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webpki-roots = "1"

domain = { path = "crates/domain" }
protocol = { path = "crates/protocol" }
gateway = { path = "crates/gateway" }
repository = { path = "crates/repository" }
