[package]
name = "gateway"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
domain.workspace = true
protocol.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
