[package]
name = "server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
aes-gcm.workspace = true
async-trait.workspace = true
axum = { workspace = true, features = ["ws"] }
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
domain.workspace = true
flate2.workspace = true
futures-util.workspace = true
gateway.workspace = true
hex.workspace = true
http.workspace = true
protocol.workspace = true
rand.workspace = true
repository.workspace = true
reqwest.workspace = true
hmac.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha1.workspace = true
sha2.workspace = true
sqlx.workspace = true
tar.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { version = "1", features = ["v4"] }
webpki-roots.workspace = true

[dev-dependencies]
rcgen = "0.14"
